--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <meta charset="UTF-8">
-  <title>はじめてのHTML</title>
- </head>
- <body>
-   <h1>HTML</h1>
-   <p>Hyper Text Markup Language の略でウェブページを作成するための言語。</p>
- </body>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>Location-based AR.js demo</title>
+  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
+  <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
+  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+</head>
+
+<body style="margin: 0; overflow: hidden;">
+  <a-scene vr-mode-ui="enabled: true" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+    <a-text value="Sports Park" look-at="[gps-camera]" scale="50 50 50" gps-entity-place="latitude: 36.575936150369905; longitude: 140.64870926651128;"></a-text>
+    <a-camera gps-camera rotation-reader> </a-camera>
+  </a-scene>
+</body>
 </html>
