--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body style="margin: 0; overflow: hidden;">
   <a-scene vr-mode-ui="enabled: true" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-    <a-text value="バーミヤン日立鮎川" look-at="[gps-camera]" scale="250 250 250" gps-entity-place="latitude: 36.57299436613212; longitude: 140.63474959534113;"></a-text>
+    <a-text value="Bamiyan Hitachi ayukawa" look-at="[gps-camera]" scale="100 100 100" gps-entity-place="latitude: 36.57299436613212; longitude: 140.63474959534113;"></a-text>
     <a-camera gps-camera rotation-reader> </a-camera>
   </a-scene>
 </body>
