--- a/index.html
+++ b/index.html
@@ -23,7 +23,14 @@
 <body style="margin: 0; overflow: hidden;">
   <a-scene vr-mode-ui="enabled: true" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
     <a-text value="Bamiyan Hitachi ayukawa" look-at="[gps-camera]" scale="100 100 100" gps-entity-place="latitude: 36.57299436613212; longitude: 140.63474959534113;"></a-text>
-    <a-text value="360"  scale="100 100 100" ></a-text>
+    <a-text
+        id="text"
+        value=""
+        look-at="[gps-camera]"
+        scale="30 30 30"
+        position="0 55 0"
+        gps-entity-place="latitude: 36.57299436613212; longitude: 140.63474959534113;"
+      ></a-text>
     <a-camera gps-camera rotation-reader> </a-camera>
   </a-scene>
   <script>
