--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
   <script src="https://unpkg.com/aframe-look-at-component@0.8.0/dist/aframe-look-at-component.min.js"></script>
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
-</head>
-    <style>
+  <style>
       #debug {
         position: fixed;
         z-index: 10000;
@@ -18,12 +17,19 @@
         left: 0;
         display: block;
       }
-    </style>
+  </style>
+</head>
 
-<body style="margin: 0; overflow: hidden;">
+ <body style="margin: 0; overflow: hidden;">
+   <div id="debug"></div>
   <a-scene vr-mode-ui="enabled: true" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-    <a-text value="Bamiyan Hitachi ayukawa" look-at="[gps-camera]" scale="100 100 100" gps-entity-place="latitude: 36.57299436613212; longitude: 140.63474959534113;"></a-text>
-    <a-text
+    <a-text 
+            value="Bamiyan Hitachi ayukawa" 
+            look-at="[gps-camera]" 
+            scale="100 100 100" 
+            gps-entity-place="latitude: 36.57299436613212; longitude: 140.63474959534113;"
+   ></a-text>
+   <a-text
         id="text"
         value=""
         look-at="[gps-camera]"
@@ -37,7 +43,7 @@
       window.addEventListener('load', () => {
         const text = document.getElementById('text');
         text.addEventListener('gps-entity-place-update-positon', (event) => {
-          document.getElementById('debug').textContent = `あと${event.detail.distance}m`;
+          document.getElementById('debug').textContent = `Distance${event.detail.distance}m`;
           text.setAttribute('value', text.getAttribute('distanceMsg') + ' left');
         });
       });
