--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 
  <body style="margin: 0; overflow: hidden;">
    <div id="debug"></div>
-  <a-scene vr-mode-ui="enabled: true" embedded arjs="sourceType: webcam; debugUIEnabled: false;">
+  <a-scene 
+           vr-mode-ui="enabled: true" 
+           embedded 
+           arjs="sourceType: webcam; debugUIEnabled: false;"
+  >
     <a-text 
             value="Bamiyan Hitachi ayukawa" 
             look-at="[gps-camera]" 
