--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
   </a-scene>
   <script>
       window.addEventListener('load', () => {
-        const text = document.getElementById('text');
+        const distanceMsg = document.querySelector('[gps-entity-place]').getAttribute('distanceMsg');
+console.log(distanceMsg); 
         text.addEventListener('gps-entity-place-update-positon', (event) => {
           document.getElementById('debug').textContent = `Distance${event.detail.distance}m`;
           text.setAttribute('value', text.getAttribute('distanceMsg') + ' left');
