--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
   <style>
       #debug {
-        position: absolute;
+        position: fixed;
         z-index: 10000;
         background-color: #fff;
         padding: 10px;
@@ -45,8 +45,9 @@
   </a-scene>
   <script>
       window.addEventListener('load', () => {
+        const text = document.getElementById('text');
         const distanceMsg = document.querySelector('[gps-entity-place]').getAttribute('distanceMsg');
-console.log(distanceMsg); 
+        console.log(distanceMsg); 
         text.addEventListener('gps-entity-place-update-positon', (event) => {
           document.getElementById('debug').textContent = `Distance${event.detail.distance}m`;
           text.setAttribute('value', text.getAttribute('distanceMsg') + ' left');
