--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       #debug {
         position: fixed;
         z-index: 10000;
-        background-color: #fff;
-        padding: 10px;
+        background-color: #e6e6fa;
+        padding: 30px;
         top: 0;
         left: 0;
         display: block;
