--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
            arjs="sourceType: webcam; debugUIEnabled: false;"
   >
     <a-text 
-            value="Bamiyan Hitachi ayukawa" 
+            value="kotobuki haitsu" 
             look-at="[gps-camera]" 
             scale="100 100 100" 
-            gps-entity-place="latitude: 36.57299436613212; longitude: 140.63474959534113;"
+            gps-entity-place="latitude: 36.571464148883194; longitude: 140.64147418614255;", 
    ></a-text>
    <a-text
         id="distanceMsg"
@@ -39,7 +39,7 @@
         look-at="[gps-camera]"
         scale="30 30 30"
         position="0 55 0"
-        gps-entity-place="latitude: 36.57299436613212; longitude: 140.63474959534113;"
+        gps-entity-place="latitude: 36.571464148883194; longitude: 140.64147418614255;", 
       ></a-text>
     <a-camera gps-camera rotation-reader> </a-camera>
   </a-scene>
