--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </style>
 </head>
 
- <body style="margin: 0; overflow: hidden;">
+ <body style="margin: 0; overflow: visible;">
    <div id="debug"></div>
   <a-scene 
            vr-mode-ui="enabled: true" 
