--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
             value="kotobuki haitsu" 
             look-at="[gps-camera]" 
             scale="100 100 100" 
-            gps-entity-place="latitude:36.571464148883194;longitude:140.64147418614255;"
+            gps-entity-place="latitude:36.57272224040214,;longitude:140.63485195554617;" 
    ></a-text>
    <a-text
         id="distanceMsg"
-        value=""
+        value="aaa"
         look-at="[gps-camera]"
         scale="30 30 30"
         position="0 55 0"
-        gps-entity-place="latitude:36.571464148883194;longitude:140.64147418614255;" 
+        gps-entity-place="latitude:36.57272224040214,;longitude:140.63485195554617;" 
       ></a-text>
     <a-camera gps-camera rotation-reader> </a-camera>
   </a-scene>
