--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
            arjs="sourceType: webcam; debugUIEnabled: false;"
   >
     <a-text 
-            value="kotobuki haitsu" 
+            value="bamiyan hitachiayukawa" 
             look-at="[gps-camera]" 
             scale="100 100 100" 
             gps-entity-place="latitude:36.57272224040214,;longitude:140.63485195554617;" 
