--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             gps-entity-place="latitude:36.57272224040214,;longitude:140.63485195554617;" 
  
         id="distanceMsg"
-        value="aaa"
+        value="A"
         look-at="[gps-camera]"
         scale="30 30 30"
         position="0 55 0"
