--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
             look-at="[gps-camera]" 
             scale="100 100 100" 
             gps-entity-place="latitude:36.57272224040214,;longitude:140.63485195554617;" 
- 
+  ></a-text>
+    <a-text 
         id="distanceMsg"
-        value="A"
+        value=""
         look-at="[gps-camera]"
         scale="30 30 30"
         position="0 55 0"
