--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       window.addEventListener('load', () => {
         const text = document.getElementById('text');
         text.addEventListener('gps-entity-place-update-position', (event) => {
-          document.getElementById('debug').textContent = `ATO${event.detail.distance}m`;
+          document.getElementById('debug').textContent = `${event.detail.distance}m remaining.`;
           text.setAttribute('value', text.getAttribute('distanceMsg') + ' left');
         });
       });
