--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <a-camera gps-camera rotation-reader> </a-camera>
   </a-scene>
    
+   const camera = document.querySlector('.camera');
+   console.log(camera);
+   
    <script>
       window.addEventListener('load', () => {
         const text = document.getElementById('text');
