--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         position="0 55 0"
         gps-entity-place="latitude:36.57272224040214,;longitude:140.63485195554617;" 
       ></a-text>
-    <a-camera gps-camera rotation-reader> </a-camera>
+    <a-camera "class=camera" gps-camera rotation-reader> </a-camera>
   </a-scene>
    
    const camera = document.querySlector('.camera');
